  122 Luca Falavigna	2009-02-09
      Use standard man pages, no longer use docbook templates



Tue 2009-01-27 20:36:31 +0100
Stable release: 0.6

  121 Luca Falavigna	2009-01-27
      DateStamp.py module: remove unneeded dot in date string

  120 Luca Falavigna	2009-01-27
      Provide Jaunty configuration file, remove Intrepid one

  119 Luca Falavigna	2009-01-26
      Do not enable modules if modulespath does not exist

  118 Luca Falavigna	2009-01-26
      Update copyright years

  117 Luca Falavigna	2009-01-26
      Update documentation with new features

  116 Luca Falavigna	2009-01-23
      Instruct setup.py to install modules

  115 Luca Falavigna	2009-01-18
      Exit if .changes file does not provide mandatory fields

  114 Luca Falavigna	2009-01-18
      Add DateStamp module

  113 Luca Falavigna	2008-12-02
      Implement lintian support as a module

  112 Luca Falavigna	2008-12-01
      Implement modules core components

  111 Luca Falavigna	2008-11-19
      Add acceptedqueue to allow packages waiting for
      a lock to be built if previously accepted.

  110 Luca Falavigna	2008-11-18
      Add files to packagequeue even if they are
      already available, so they can be removed

  109 Luca Falavigna	2008-08-07
      Build log is now saved with .buildlog extension

  108 Luca Falavigna	2008-08-07
      Add support for DEBOOTSTRAP pbuilder option

  107 Luca Falavigna	2008-08-07
      Move away from globals.py

  106 Luca Falavigna	2008-08-07
      Code reorganization, some files merged

  105 Luca Falavigna	2008-06-30
      Fix typos in documentation



Thu 2008-06-26 21:15:06 +0200
Stable release: 0.5

  104 Luca Falavigna	2008-06-26
      Makefile revisited

  103 Luca Falavigna	2008-06-25
      Relicense under GPL version 3

  102 Luca Falavigna	2008-06-25
      Remove linda support, software is obsolete

  101 Luca Falavigna	2008-04-28
      Documentation improved

  100 Luca Falavigna	2008-04-26