@@ -1,3 +1,6 @@
+  123 Luca Falavigna	2009-03-02
+      Exit if another instance is already running
+
   122 Luca Falavigna	2009-02-09
       Use standard man pages, no longer use docbook templates
 
